--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -7,7 +7,7 @@ description: A comprehensive guide on how to use Telegram
 
 Welcome to the Telegram Guide! Please select your preferred language from the top navigation bar.
 
-欢迎使用 Telegram 指南！请从顶部导航栏选择您喜欢的语言。
+欢迎使用 Telegram 指南！请从下面列表栏选择您喜欢的语言。
 
 - [English](/en)
 - [中文](/zh)
