add every page title

--- a/pages/en/how-to-find-telegram-channels.mdx
+++ b/pages/en/how-to-find-telegram-channels.mdx
@@ -1,3 +1,8 @@
+---
+title: "How to Find Telegram Channels: A Complete Guide"
+description: "A guide on how to find and join Telegram channels"
+---
+
 ## How to Find Telegram Channels: A Complete Guide
 
 Telegram channels are powerful tools for distributing information or files to an unlimited number of subscribers. Unlike group chats, only administrators can post messages in channels, making them ideal for following organized content streams. Here's how you can find and join Telegram channels.
