--- a/pages/en/how-to-use-telegram-bots.mdx
+++ b/pages/en/how-to-use-telegram-bots.mdx
@@ -1,3 +1,8 @@
+---
+title: How to Use Telegram Bots
+description: A guide on how to use Telegram Bots
+---
+
 ## How to Use Telegram Bots
 
 ### What is a Telegram Bot?
