--- a/pages/en/how-to-use-telegram-to-make-money.mdx
+++ b/pages/en/how-to-use-telegram-to-make-money.mdx
@@ -1,3 +1,8 @@
+---
+title: "How to use Telegram to make money"
+description: "A guide on how to use Telegram to make money"
+---
+
 # How to use Telegram to make money
 
 Telegram is one of the fastest-growing social messaging apps globally, with over 800 million users. With the right approach, you can transform your Telegram group into a stable income source. This article will introduce several practical ways to monetize on Telegram.
