--- a/pages/en/index.mdx
+++ b/pages/en/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Introduction"
+title: "How To Use Telegram: Introduction"
 description: "A comprehensive guide on how to use Telegram"
 ---
 
-# Welcome to Telegram Guide
+# How To Use Telegram
 
 Welcome to the comprehensive guide on how to use Telegram! This guide will help you understand and master Telegram's features.
 
