--- a/pages/en/installation.mdx
+++ b/pages/en/installation.mdx
@@ -1,6 +1,6 @@
 ---
-title: Installation & Setup
-description: How to install and set up Telegram
+title: "How To Use Telegram: Installation & Setup"
+description: "How to install and set up Telegram"
 ---
 
 # Installation & Setup
