--- a/pages/en/telegram-without-phone.mdx
+++ b/pages/en/telegram-without-phone.mdx
@@ -1,3 +1,8 @@
+---
+title: "How to Use Telegram Without a Phone Number"
+description: "A guide on how to use Telegram without a real phone number"
+---
+
 # How to Use Telegram Without a Phone Number
 
 Telegram is a privacy-focused messaging app that requires phone number verification during registration. This guide will introduce several methods to use Telegram without using your real phone number.
