--- a/pages/en/tips.mdx
+++ b/pages/en/tips.mdx
@@ -1,3 +1,8 @@
+---
+title: "How To Use Telegram: Tips & Tricks"
+description: "A comprehensive guide on how to use Telegram"
+---
+
 # Tips & Tricks
 
 ## Power User Tips
