--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -3,7 +3,7 @@ title: Home
 description: A comprehensive guide on how to use Telegram
 ---
 
-# Telegram Guide | Telegram 指南
+# How to Use Telegram | 如何使用 Telegram
 
 Welcome to the Telegram Guide! Please select your preferred language from the top navigation bar.
 
