--- a/pages/zh/how-to-find-telegram-channels.mdx
+++ b/pages/zh/how-to-find-telegram-channels.mdx
@@ -1,3 +1,8 @@
+---
+title: "如何查找 Telegram 频道：完整指南"
+description: "一个完整的指南，帮助你找到和加入 Telegram 频道"
+---
+
 ## 如何查找 Telegram 频道：完整指南
 
 Telegram 频道是一个强大的工具，可以向无限数量的订阅者分发信息或文件。与群聊不同，频道中只有管理员可以发布消息，这使得它成为关注有组织内容的理想选择。以下是查找和加入 Telegram 频道的方法。
