--- a/pages/zh/how-to-use-telegram-bots.mdx
+++ b/pages/zh/how-to-use-telegram-bots.mdx
@@ -1,3 +1,8 @@
+---
+title: "如何使用 Telegram 机器人：完整指南"
+description: "一个完整的指南，帮助你使用 Telegram 机器人"
+---
+
 ## 如何使用 Telegram 机器人
 
 ### 什么是 Telegram 机器人？
