--- a/pages/zh/how-to-use-telegram-to-make-money.mdx
+++ b/pages/zh/how-to-use-telegram-to-make-money.mdx
@@ -1,3 +1,8 @@
+---
+title: "如何通过 Telegram 赚钱：完整指南"
+description: "一个完整的指南，帮助你通过 Telegram 赚钱"
+---
+
 # 如何通过 Telegram 赚钱
 
 Telegram 是全球增长最快的社交通讯应用之一，拥有超过8亿用户。通过正确的方法，你可以将 Telegram 群组转化为稳定的收入来源。本文将介绍几种在 Telegram 上赚钱的实用方法。
