--- a/pages/zh/telegram-without-phone.mdx
+++ b/pages/zh/telegram-without-phone.mdx
@@ -1,3 +1,8 @@
+---
+title: "如何不用手机号码使用 Telegram：完整指南"
+description: "一个完整的指南，帮助你不用手机号码使用 Telegram"
+---
+
 # 如何不用手机号码使用 Telegram
 
 Telegram 是一款注重隐私的即时通讯软件，但注册时需要手机号码验证。本指南将介绍几种在不使用真实手机号码的情况下使用 Telegram 的方法。
