--- a/pages/en/advanced-features.mdx
+++ b/pages/en/advanced-features.mdx
@@ -1,3 +1,8 @@
+---
+title: "How To Use Telegram: Advanced Features"
+description: "A comprehensive guide on how to use Telegram"
+---
+
 # Advanced Features
 
 ## Channels
