--- a/pages/en/basic-features.mdx
+++ b/pages/en/basic-features.mdx
@@ -1,3 +1,8 @@
+---
+title: "How To Use Telegram: Basic Features"
+description: "A comprehensive guide on how to use Telegram"
+---
+
 # Basic Features
 
 ## Messaging
