--- a/pages/en/security.mdx
+++ b/pages/en/security.mdx
@@ -1,3 +1,8 @@
+---
+title: "How To Use Telegram: Security & Privacy"
+description: "Learn about Telegram's security and privacy features"
+---
+
 # Security & Privacy
 
 ## Privacy Features
