--- a/pages/zh/index.mdx
+++ b/pages/zh/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: "简介"
+title: "如何使用Telegram：简介"
 description: "一个关于如何使用 Telegram 的全面指南"
 ---
 
-# 欢迎使用 Telegram 指南
+# 如何使用 Telegram
 
 欢迎来到 Telegram 使用指南！本指南将帮助你了解和掌握 Telegram 的各项功能。
 
