title modified to How To Use Telegram | xx

--- a/pages/en/index.mdx
+++ b/pages/en/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "How To Use Telegram: Introduction"
+title: "How To Use Telegram | Introduction"
 description: "A comprehensive guide on how to use Telegram"
 ---
 
