--- a/pages/en/installation.mdx
+++ b/pages/en/installation.mdx
@@ -1,5 +1,5 @@
 ---
-title: "How To Use Telegram: Installation & Setup"
+title: "How To Use Telegram | Installation & Setup"
 description: "How to install and set up Telegram"
 ---
 
