--- a/pages/en/security.mdx
+++ b/pages/en/security.mdx
@@ -1,5 +1,5 @@
 ---
-title: "How To Use Telegram: Security & Privacy"
+title: "How To Use Telegram | Security & Privacy"
 description: "Learn about Telegram's security and privacy features"
 ---
 
