--- a/pages/en/tips.mdx
+++ b/pages/en/tips.mdx
@@ -1,5 +1,5 @@
 ---
-title: "How To Use Telegram: Tips & Tricks"
+title: "How To Use Telegram | Tips & Tricks"
 description: "A comprehensive guide on how to use Telegram"
 ---
 
