--- a/pages/zh/security.mdx
+++ b/pages/zh/security.mdx
@@ -1,5 +1,5 @@
 ---
-title: "如何使用Telegram：安全与隐私"
+title: "如何使用Telegram | 安全与隐私"
 description: Learn about Telegram's security and privacy features
 ---
 
