--- a/pages/en/advanced-features.mdx
+++ b/pages/en/advanced-features.mdx
@@ -1,5 +1,5 @@
 ---
-title: "How To Use Telegram: Advanced Features"
+title: "How To Use Telegram | Advanced Features"
 description: "A comprehensive guide on how to use Telegram"
 ---
 
