--- a/pages/en/basic-features.mdx
+++ b/pages/en/basic-features.mdx
@@ -1,5 +1,5 @@
 ---
-title: "How To Use Telegram: Basic Features"
+title: "How To Use Telegram | Basic Features"
 description: "A comprehensive guide on how to use Telegram"
 ---
 
